--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Devops Certification Training - Simplilearn</title>
 </head>
 <body>
     <h1>Welcome Josiah Orie</h1>
